--- a/_config.yml
+++ b/_config.yml
@@ -158,7 +158,7 @@ defaults:
       layout: page
       permalink: /:title/
   - scope:
-      path: assets/img/favicons
+      path: assets/img/favicon
     values:
       swcache: true
   - scope:
